--- a/ChangeLog
+++ b/ChangeLog
@@ -1521,3 +1521,4 @@ openvix: developer 6.6.010.001
 openvix: release 6.6.010
 openvix: developer 6.6.011.001
 openvix: developer 6.6.011.002
+openvix: developer 6.6.011.003
