--- a/ChangeLog
+++ b/ChangeLog
@@ -1522,3 +1522,4 @@ openvix: release 6.6.010
 openvix: developer 6.6.011.001
 openvix: developer 6.6.011.002
 openvix: developer 6.6.011.003
+openvix: developer 6.6.011.004
