--- a/ChangeLog
+++ b/ChangeLog
@@ -1523,3 +1523,4 @@ openvix: developer 6.6.011.001
 openvix: developer 6.6.011.002
 openvix: developer 6.6.011.003
 openvix: developer 6.6.011.004
+openvix: developer 6.6.011.005
