--- a/ChangeLog
+++ b/ChangeLog
@@ -1525,3 +1525,4 @@ openvix: developer 6.6.011.003
 openvix: developer 6.6.011.004
 openvix: developer 6.6.011.005
 openvix: developer 6.6.011.006
+openvix: developer 6.6.011.007
