--- a/ChangeLog
+++ b/ChangeLog
@@ -1526,3 +1526,4 @@ openvix: developer 6.6.011.004
 openvix: developer 6.6.011.005
 openvix: developer 6.6.011.006
 openvix: developer 6.6.011.007
+openvix: release 6.6.011
