--- a/ChangeLog
+++ b/ChangeLog
@@ -1527,3 +1527,4 @@ openvix: developer 6.6.011.005
 openvix: developer 6.6.011.006
 openvix: developer 6.6.011.007
 openvix: release 6.6.011
+openvix: developer 6.6.012.001
