--- a/ChangeLog
+++ b/ChangeLog
@@ -1528,3 +1528,4 @@ openvix: developer 6.6.011.006
 openvix: developer 6.6.011.007
 openvix: release 6.6.011
 openvix: developer 6.6.012.001
+openvix: developer 6.6.012.002
