--- a/ChangeLog
+++ b/ChangeLog
@@ -1532,3 +1532,4 @@ openvix: developer 6.6.012.002
 openvix: release 6.6.012
 openvix: developer 6.6.013.001
 openvix: developer 6.6.013.002
+openvix: developer 6.6.013.003
