--- a/ChangeLog
+++ b/ChangeLog
@@ -1534,3 +1534,4 @@ openvix: developer 6.6.013.001
 openvix: developer 6.6.013.002
 openvix: developer 6.6.013.003
 openvix: release 6.6.013
+openvix: developer 6.7.000.001
