--- a/ChangeLog
+++ b/ChangeLog
@@ -1536,3 +1536,4 @@ openvix: developer 6.6.013.003
 openvix: release 6.6.013
 openvix: developer 6.7.000.001
 openvix: developer 6.7.000.002
+openvix: developer 6.7.000.003
