--- a/ChangeLog
+++ b/ChangeLog
@@ -1537,3 +1537,4 @@ openvix: release 6.6.013
 openvix: developer 6.7.000.001
 openvix: developer 6.7.000.002
 openvix: developer 6.7.000.003
+openvix: developer 6.7.000.004
