--- a/ChangeLog
+++ b/ChangeLog
@@ -1538,3 +1538,4 @@ openvix: developer 6.7.000.001
 openvix: developer 6.7.000.002
 openvix: developer 6.7.000.003
 openvix: developer 6.7.000.004
+openvix: developer 6.7.000.005
