--- a/ChangeLog
+++ b/ChangeLog
@@ -1541,3 +1541,4 @@ openvix: developer 6.7.000.004
 openvix: developer 6.7.000.005
 openvix: developer 6.7.000.006
 openvix: developer 6.7.000.007
+openvix: developer 6.7.000.008
