--- a/ChangeLog
+++ b/ChangeLog
@@ -1542,3 +1542,4 @@ openvix: developer 6.7.000.005
 openvix: developer 6.7.000.006
 openvix: developer 6.7.000.007
 openvix: developer 6.7.000.008
+openvix: developer 6.7.000.009
