--- a/ChangeLog
+++ b/ChangeLog
@@ -1543,3 +1543,4 @@ openvix: developer 6.7.000.006
 openvix: developer 6.7.000.007
 openvix: developer 6.7.000.008
 openvix: developer 6.7.000.009
+openvix: developer 6.7.000.010
