--- a/ChangeLog
+++ b/ChangeLog
@@ -1544,3 +1544,4 @@ openvix: developer 6.7.000.007
 openvix: developer 6.7.000.008
 openvix: developer 6.7.000.009
 openvix: developer 6.7.000.010
+openvix: release 6.7.000
