--- a/ChangeLog
+++ b/ChangeLog
@@ -1545,3 +1545,4 @@ openvix: developer 6.7.000.008
 openvix: developer 6.7.000.009
 openvix: developer 6.7.000.010
 openvix: release 6.7.000
+openvix: developer 6.7.001.001
