--- a/ChangeLog
+++ b/ChangeLog
@@ -1547,3 +1547,4 @@ openvix: developer 6.7.000.010
 openvix: release 6.7.000
 openvix: developer 6.7.001.001
 openvix: release 6.7.001
+openvix: developer 6.7.002.001
