--- a/ChangeLog
+++ b/ChangeLog
@@ -1548,3 +1548,4 @@ openvix: release 6.7.000
 openvix: developer 6.7.001.001
 openvix: release 6.7.001
 openvix: developer 6.7.002.001
+openvix: release 6.7.002
