--- a/ChangeLog
+++ b/ChangeLog
@@ -1549,3 +1549,4 @@ openvix: developer 6.7.001.001
 openvix: release 6.7.001
 openvix: developer 6.7.002.001
 openvix: release 6.7.002
+openvix: developer 6.7.003.001
