--- a/ChangeLog
+++ b/ChangeLog
@@ -1550,3 +1550,4 @@ openvix: release 6.7.001
 openvix: developer 6.7.002.001
 openvix: release 6.7.002
 openvix: developer 6.7.003.001
+openvix: developer 6.7.003.002
