--- a/ChangeLog
+++ b/ChangeLog
@@ -1551,3 +1551,4 @@ openvix: developer 6.7.002.001
 openvix: release 6.7.002
 openvix: developer 6.7.003.001
 openvix: developer 6.7.003.002
+openvix: developer 6.7.003.003
