--- a/ChangeLog
+++ b/ChangeLog
@@ -1552,3 +1552,4 @@ openvix: release 6.7.002
 openvix: developer 6.7.003.001
 openvix: developer 6.7.003.002
 openvix: developer 6.7.003.003
+openvix: developer 6.7.003.004
