--- a/ChangeLog
+++ b/ChangeLog
@@ -1553,3 +1553,4 @@ openvix: developer 6.7.003.001
 openvix: developer 6.7.003.002
 openvix: developer 6.7.003.003
 openvix: developer 6.7.003.004
+openvix: release 6.7.003
