--- a/ChangeLog
+++ b/ChangeLog
@@ -1554,3 +1554,4 @@ openvix: developer 6.7.003.002
 openvix: developer 6.7.003.003
 openvix: developer 6.7.003.004
 openvix: release 6.7.003
+openvix: developer 6.7.004.001
