--- a/ChangeLog
+++ b/ChangeLog
@@ -1555,3 +1555,4 @@ openvix: developer 6.7.003.003
 openvix: developer 6.7.003.004
 openvix: release 6.7.003
 openvix: developer 6.7.004.001
+openvix: release 6.7.004
