--- a/ChangeLog
+++ b/ChangeLog
@@ -1556,3 +1556,4 @@ openvix: developer 6.7.003.004
 openvix: release 6.7.003
 openvix: developer 6.7.004.001
 openvix: release 6.7.004
+openvix: developer 6.7.005.001
