--- a/ChangeLog
+++ b/ChangeLog
@@ -1557,3 +1557,4 @@ openvix: release 6.7.003
 openvix: developer 6.7.004.001
 openvix: release 6.7.004
 openvix: developer 6.7.005.001
+openvix: developer 6.7.005.002
