--- a/ChangeLog
+++ b/ChangeLog
@@ -1558,3 +1558,4 @@ openvix: developer 6.7.004.001
 openvix: release 6.7.004
 openvix: developer 6.7.005.001
 openvix: developer 6.7.005.002
+openvix: release 6.7.005
