--- a/ChangeLog
+++ b/ChangeLog
@@ -1560,3 +1560,4 @@ openvix: developer 6.7.005.001
 openvix: developer 6.7.005.002
 openvix: release 6.7.005
 openvix: developer 6.7.006.001
+openvix: developer 6.7.006.002
