--- a/ChangeLog
+++ b/ChangeLog
@@ -1561,3 +1561,4 @@ openvix: developer 6.7.005.002
 openvix: release 6.7.005
 openvix: developer 6.7.006.001
 openvix: developer 6.7.006.002
+openvix: developer 6.7.006.003
