--- a/ChangeLog
+++ b/ChangeLog
@@ -1562,3 +1562,4 @@ openvix: release 6.7.005
 openvix: developer 6.7.006.001
 openvix: developer 6.7.006.002
 openvix: developer 6.7.006.003
+openvix: developer 6.7.006.004
