--- a/ChangeLog
+++ b/ChangeLog
@@ -1563,3 +1563,4 @@ openvix: developer 6.7.006.001
 openvix: developer 6.7.006.002
 openvix: developer 6.7.006.003
 openvix: developer 6.7.006.004
+openvix: release 6.7.006
