--- a/ChangeLog
+++ b/ChangeLog
@@ -1565,3 +1565,4 @@ openvix: developer 6.7.006.003
 openvix: developer 6.7.006.004
 openvix: release 6.7.006
 openvix: developer 6.7.007.001
+openvix: release 6.7.007
