--- a/ChangeLog
+++ b/ChangeLog
@@ -1567,3 +1567,4 @@ openvix: release 6.7.006
 openvix: developer 6.7.007.001
 openvix: release 6.7.007
 openvix: developer 6.7.008.001
+openvix: developer 6.7.008.002
