--- a/ChangeLog
+++ b/ChangeLog
@@ -1568,3 +1568,4 @@ openvix: developer 6.7.007.001
 openvix: release 6.7.007
 openvix: developer 6.7.008.001
 openvix: developer 6.7.008.002
+openvix: developer 6.7.008.003
