--- a/ChangeLog
+++ b/ChangeLog
@@ -1569,3 +1569,4 @@ openvix: release 6.7.007
 openvix: developer 6.7.008.001
 openvix: developer 6.7.008.002
 openvix: developer 6.7.008.003
+openvix: developer 6.7.008.004
