--- a/ChangeLog
+++ b/ChangeLog
@@ -1570,3 +1570,4 @@ openvix: developer 6.7.008.001
 openvix: developer 6.7.008.002
 openvix: developer 6.7.008.003
 openvix: developer 6.7.008.004
+openvix: developer 6.7.008.005
