--- a/ChangeLog
+++ b/ChangeLog
@@ -1571,3 +1571,4 @@ openvix: developer 6.7.008.002
 openvix: developer 6.7.008.003
 openvix: developer 6.7.008.004
 openvix: developer 6.7.008.005
+openvix: release 6.7.008
