--- a/ChangeLog
+++ b/ChangeLog
@@ -1572,3 +1572,4 @@ openvix: developer 6.7.008.003
 openvix: developer 6.7.008.004
 openvix: developer 6.7.008.005
 openvix: release 6.7.008
+openvix: developer 6.7.009.001
