--- a/ChangeLog
+++ b/ChangeLog
@@ -1573,3 +1573,4 @@ openvix: developer 6.7.008.004
 openvix: developer 6.7.008.005
 openvix: release 6.7.008
 openvix: developer 6.7.009.001
+openvix: developer 6.7.009.002
