--- a/ChangeLog
+++ b/ChangeLog
@@ -1574,3 +1574,4 @@ openvix: developer 6.7.008.005
 openvix: release 6.7.008
 openvix: developer 6.7.009.001
 openvix: developer 6.7.009.002
+openvix: developer 6.7.009.003
