--- a/ChangeLog
+++ b/ChangeLog
@@ -1575,3 +1575,4 @@ openvix: release 6.7.008
 openvix: developer 6.7.009.001
 openvix: developer 6.7.009.002
 openvix: developer 6.7.009.003
+openvix: developer 6.7.009.004
