--- a/ChangeLog
+++ b/ChangeLog
@@ -1576,3 +1576,4 @@ openvix: developer 6.7.009.001
 openvix: developer 6.7.009.002
 openvix: developer 6.7.009.003
 openvix: developer 6.7.009.004
+openvix: developer 6.7.009.005
