--- a/ChangeLog
+++ b/ChangeLog
@@ -1579,3 +1579,4 @@ openvix: developer 6.7.009.004
 openvix: developer 6.7.009.005
 openvix: developer 6.7.009.006
 openvix: developer 6.7.009.007
+openvix: release 6.7.009
