--- a/ChangeLog
+++ b/ChangeLog
@@ -1580,3 +1580,4 @@ openvix: developer 6.7.009.005
 openvix: developer 6.7.009.006
 openvix: developer 6.7.009.007
 openvix: release 6.7.009
+openvix: developer 6.7.010.001
