--- a/ChangeLog
+++ b/ChangeLog
@@ -1581,3 +1581,4 @@ openvix: developer 6.7.009.006
 openvix: developer 6.7.009.007
 openvix: release 6.7.009
 openvix: developer 6.7.010.001
+openvix: developer 6.7.010.002
