--- a/ChangeLog
+++ b/ChangeLog
@@ -1582,3 +1582,4 @@ openvix: developer 6.7.009.007
 openvix: release 6.7.009
 openvix: developer 6.7.010.001
 openvix: developer 6.7.010.002
+openvix: developer 6.7.010.003
