--- a/ChangeLog
+++ b/ChangeLog
@@ -1583,3 +1583,4 @@ openvix: release 6.7.009
 openvix: developer 6.7.010.001
 openvix: developer 6.7.010.002
 openvix: developer 6.7.010.003
+openvix: developer 6.7.010.004
