--- a/ChangeLog
+++ b/ChangeLog
@@ -1584,3 +1584,4 @@ openvix: developer 6.7.010.001
 openvix: developer 6.7.010.002
 openvix: developer 6.7.010.003
 openvix: developer 6.7.010.004
+openvix: developer 6.7.010.005
