--- a/ChangeLog
+++ b/ChangeLog
@@ -1587,3 +1587,4 @@ openvix: developer 6.7.010.004
 openvix: developer 6.7.010.005
 openvix: developer 6.7.010.006
 openvix: developer 6.7.010.007
+openvix: developer 6.7.010.008
