--- a/ChangeLog
+++ b/ChangeLog
@@ -1588,3 +1588,4 @@ openvix: developer 6.7.010.005
 openvix: developer 6.7.010.006
 openvix: developer 6.7.010.007
 openvix: developer 6.7.010.008
+openvix: developer 6.7.010.009
