--- a/ChangeLog
+++ b/ChangeLog
@@ -1589,3 +1589,4 @@ openvix: developer 6.7.010.006
 openvix: developer 6.7.010.007
 openvix: developer 6.7.010.008
 openvix: developer 6.7.010.009
+openvix: developer 6.7.010.010
