--- a/ChangeLog
+++ b/ChangeLog
@@ -1591,3 +1591,4 @@ openvix: developer 6.7.010.008
 openvix: developer 6.7.010.009
 openvix: developer 6.7.010.010
 openvix: developer 6.7.010.011
+openvix: release 6.7.010
