--- a/ChangeLog
+++ b/ChangeLog
@@ -1594,3 +1594,4 @@ openvix: developer 6.7.010.011
 openvix: release 6.7.010
 openvix: developer 6.7.011.001
 openvix: developer 6.7.011.002
+openvix: release 6.7.011
