--- a/ChangeLog
+++ b/ChangeLog
@@ -1596,3 +1596,4 @@ openvix: developer 6.7.011.001
 openvix: developer 6.7.011.002
 openvix: release 6.7.011
 openvix: developer 6.7.011.003
+openvix: developer 6.7.012.001
