--- a/ChangeLog
+++ b/ChangeLog
@@ -1597,3 +1597,4 @@ openvix: developer 6.7.011.002
 openvix: release 6.7.011
 openvix: developer 6.7.011.003
 openvix: developer 6.7.012.001
+openvix: release 6.7.012
