--- a/ChangeLog
+++ b/ChangeLog
@@ -1598,3 +1598,4 @@ openvix: release 6.7.011
 openvix: developer 6.7.011.003
 openvix: developer 6.7.012.001
 openvix: release 6.7.012
+openvix: developer 6.7.013.001
