--- a/ChangeLog
+++ b/ChangeLog
@@ -1599,3 +1599,4 @@ openvix: developer 6.7.011.003
 openvix: developer 6.7.012.001
 openvix: release 6.7.012
 openvix: developer 6.7.013.001
+openvix: developer 6.7.013.002
