--- a/ChangeLog
+++ b/ChangeLog
@@ -1600,3 +1600,4 @@ openvix: developer 6.7.012.001
 openvix: release 6.7.012
 openvix: developer 6.7.013.001
 openvix: developer 6.7.013.002
+openvix: developer 6.7.013.003
