--- a/ChangeLog
+++ b/ChangeLog
@@ -1601,3 +1601,4 @@ openvix: release 6.7.012
 openvix: developer 6.7.013.001
 openvix: developer 6.7.013.002
 openvix: developer 6.7.013.003
+openvix: developer 6.7.013.004
