--- a/ChangeLog
+++ b/ChangeLog
@@ -1602,3 +1602,4 @@ openvix: developer 6.7.013.001
 openvix: developer 6.7.013.002
 openvix: developer 6.7.013.003
 openvix: developer 6.7.013.004
+openvix: developer 6.7.013.005
