--- a/ChangeLog
+++ b/ChangeLog
@@ -1604,3 +1604,4 @@ openvix: developer 6.7.013.003
 openvix: developer 6.7.013.004
 openvix: developer 6.7.013.005
 openvix: developer 6.7.013.006
+openvix: release 6.7.013
