--- a/ChangeLog
+++ b/ChangeLog
@@ -1605,3 +1605,4 @@ openvix: developer 6.7.013.004
 openvix: developer 6.7.013.005
 openvix: developer 6.7.013.006
 openvix: release 6.7.013
+openvix: developer 6.7.014.001
