--- a/ChangeLog
+++ b/ChangeLog
@@ -1606,3 +1606,4 @@ openvix: developer 6.7.013.005
 openvix: developer 6.7.013.006
 openvix: release 6.7.013
 openvix: developer 6.7.014.001
+openvix: developer 6.7.014.002
