--- a/ChangeLog
+++ b/ChangeLog
@@ -1607,3 +1607,4 @@ openvix: developer 6.7.013.006
 openvix: release 6.7.013
 openvix: developer 6.7.014.001
 openvix: developer 6.7.014.002
+openvix: developer 6.7.014.003
