--- a/ChangeLog
+++ b/ChangeLog
@@ -1608,3 +1608,4 @@ openvix: release 6.7.013
 openvix: developer 6.7.014.001
 openvix: developer 6.7.014.002
 openvix: developer 6.7.014.003
+openvix: developer 6.7.014.004
