--- a/ChangeLog
+++ b/ChangeLog
@@ -1609,3 +1609,4 @@ openvix: developer 6.7.014.001
 openvix: developer 6.7.014.002
 openvix: developer 6.7.014.003
 openvix: developer 6.7.014.004
+openvix: developer 6.7.014.005
