--- a/ChangeLog
+++ b/ChangeLog
@@ -1610,3 +1610,4 @@ openvix: developer 6.7.014.002
 openvix: developer 6.7.014.003
 openvix: developer 6.7.014.004
 openvix: developer 6.7.014.005
+openvix: developer 6.7.014.006
