--- a/ChangeLog
+++ b/ChangeLog
@@ -1611,3 +1611,4 @@ openvix: developer 6.7.014.003
 openvix: developer 6.7.014.004
 openvix: developer 6.7.014.005
 openvix: developer 6.7.014.006
+openvix: release 6.7.014
