--- a/ChangeLog
+++ b/ChangeLog
@@ -1616,3 +1616,4 @@ openvix: developer 6.7.015.001
 openvix: release 6.7.015
 openvix: developer 6.7.016.001
 openvix: developer 6.7.016.002
+openvix: developer 6.7.016.003
