--- a/ChangeLog
+++ b/ChangeLog
@@ -1617,3 +1617,4 @@ openvix: release 6.7.015
 openvix: developer 6.7.016.001
 openvix: developer 6.7.016.002
 openvix: developer 6.7.016.003
+openvix: developer 6.7.016.004
