--- a/ChangeLog
+++ b/ChangeLog
@@ -1618,3 +1618,4 @@ openvix: developer 6.7.016.001
 openvix: developer 6.7.016.002
 openvix: developer 6.7.016.003
 openvix: developer 6.7.016.004
+openvix: developer 6.7.016.005
