--- a/ChangeLog
+++ b/ChangeLog
@@ -1619,3 +1619,4 @@ openvix: developer 6.7.016.002
 openvix: developer 6.7.016.003
 openvix: developer 6.7.016.004
 openvix: developer 6.7.016.005
+openvix: developer 6.7.016.006
