--- a/ChangeLog
+++ b/ChangeLog
@@ -1622,3 +1622,4 @@ openvix: developer 6.7.016.005
 openvix: developer 6.7.016.006
 openvix: developer 6.7.016.007
 openvix: release 6.7.016
+openvix: developer 6.7.017.001
