--- a/ChangeLog
+++ b/ChangeLog
@@ -1624,3 +1624,4 @@ openvix: developer 6.7.016.007
 openvix: release 6.7.016
 openvix: developer 6.7.017.001
 openvix: release 6.7.017
+openvix: developer 6.7.018.001
