--- a/ChangeLog
+++ b/ChangeLog
@@ -1626,3 +1626,4 @@ openvix: developer 6.7.017.001
 openvix: release 6.7.017
 openvix: developer 6.7.018.001
 openvix: developer 6.7.018.002
+openvix: developer 6.7.018.003
