--- a/ChangeLog
+++ b/ChangeLog
@@ -1627,3 +1627,4 @@ openvix: release 6.7.017
 openvix: developer 6.7.018.001
 openvix: developer 6.7.018.002
 openvix: developer 6.7.018.003
+openvix: developer 6.7.018.004
