--- a/ChangeLog
+++ b/ChangeLog
@@ -1628,3 +1628,4 @@ openvix: developer 6.7.018.001
 openvix: developer 6.7.018.002
 openvix: developer 6.7.018.003
 openvix: developer 6.7.018.004
+openvix: developer 6.7.018.005
