--- a/ChangeLog
+++ b/ChangeLog
@@ -1629,3 +1629,4 @@ openvix: developer 6.7.018.002
 openvix: developer 6.7.018.003
 openvix: developer 6.7.018.004
 openvix: developer 6.7.018.005
+openvix: developer 6.7.018.006
