--- a/ChangeLog
+++ b/ChangeLog
@@ -1631,3 +1631,4 @@ openvix: developer 6.7.018.004
 openvix: developer 6.7.018.005
 openvix: developer 6.7.018.006
 openvix: release 6.7.018
+openvix: developer 6.7.019.001
