--- a/ChangeLog
+++ b/ChangeLog
@@ -1632,3 +1632,4 @@ openvix: developer 6.7.018.005
 openvix: developer 6.7.018.006
 openvix: release 6.7.018
 openvix: developer 6.7.019.001
+openvix: release 6.7.019
