--- a/ChangeLog
+++ b/ChangeLog
@@ -1633,3 +1633,4 @@ openvix: developer 6.7.018.006
 openvix: release 6.7.018
 openvix: developer 6.7.019.001
 openvix: release 6.7.019
+openvix: developer 6.7.020.001
