--- a/ChangeLog
+++ b/ChangeLog
@@ -1634,3 +1634,4 @@ openvix: release 6.7.018
 openvix: developer 6.7.019.001
 openvix: release 6.7.019
 openvix: developer 6.7.020.001
+openvix: developer 6.7.020.002
