--- a/ChangeLog
+++ b/ChangeLog
@@ -1635,3 +1635,4 @@ openvix: developer 6.7.019.001
 openvix: release 6.7.019
 openvix: developer 6.7.020.001
 openvix: developer 6.7.020.002
+openvix: developer 6.7.020.003
