--- a/ChangeLog
+++ b/ChangeLog
@@ -1637,3 +1637,4 @@ openvix: developer 6.7.020.001
 openvix: developer 6.7.020.002
 openvix: developer 6.7.020.003
 openvix: release 6.7.020
+openvix: developer 6.8.001.001
