--- a/ChangeLog
+++ b/ChangeLog
@@ -1639,3 +1639,4 @@ openvix: developer 6.7.020.003
 openvix: release 6.7.020
 openvix: developer 6.8.001.001
 openvix: developer 6.8.001.002
+openvix: developer 6.8.001.003
