--- a/ChangeLog
+++ b/ChangeLog
@@ -1640,3 +1640,4 @@ openvix: release 6.7.020
 openvix: developer 6.8.001.001
 openvix: developer 6.8.001.002
 openvix: developer 6.8.001.003
+openvix: developer 6.8.001.004
