--- a/ChangeLog
+++ b/ChangeLog
@@ -1641,3 +1641,4 @@ openvix: developer 6.8.001.001
 openvix: developer 6.8.001.002
 openvix: developer 6.8.001.003
 openvix: developer 6.8.001.004
+openvix: developer 6.8.001.005
