--- a/ChangeLog
+++ b/ChangeLog
@@ -1642,3 +1642,4 @@ openvix: developer 6.8.001.002
 openvix: developer 6.8.001.003
 openvix: developer 6.8.001.004
 openvix: developer 6.8.001.005
+openvix: developer 6.8.001.006
