--- a/ChangeLog
+++ b/ChangeLog
@@ -1643,3 +1643,4 @@ openvix: developer 6.8.001.003
 openvix: developer 6.8.001.004
 openvix: developer 6.8.001.005
 openvix: developer 6.8.001.006
+openvix: release 6.8.001
