--- a/ChangeLog
+++ b/ChangeLog
@@ -1647,3 +1647,4 @@ openvix: release 6.8.001
 openvix: developer 6.8.001.007
 openvix: developer 6.8.001.008
 openvix: release 6.8.001
+openvix: developer 6.8.002.001
