--- a/ChangeLog
+++ b/ChangeLog
@@ -1648,3 +1648,4 @@ openvix: developer 6.8.001.007
 openvix: developer 6.8.001.008
 openvix: release 6.8.001
 openvix: developer 6.8.002.001
+openvix: developer 6.8.002.002
