--- a/ChangeLog
+++ b/ChangeLog
@@ -1649,3 +1649,4 @@ openvix: developer 6.8.001.008
 openvix: release 6.8.001
 openvix: developer 6.8.002.001
 openvix: developer 6.8.002.002
+openvix: developer 6.8.002.003
