--- a/ChangeLog
+++ b/ChangeLog
@@ -1650,3 +1650,4 @@ openvix: release 6.8.001
 openvix: developer 6.8.002.001
 openvix: developer 6.8.002.002
 openvix: developer 6.8.002.003
+openvix: developer 6.8.002.004
