--- a/ChangeLog
+++ b/ChangeLog
@@ -1653,3 +1653,4 @@ openvix: developer 6.8.002.003
 openvix: developer 6.8.002.004
 openvix: release 6.8.002
 openvix: developer 6.8.002.005
+openvix: developer 6.8.002.006
