--- a/ChangeLog
+++ b/ChangeLog
@@ -1655,3 +1655,4 @@ openvix: release 6.8.002
 openvix: developer 6.8.002.005
 openvix: developer 6.8.002.006
 openvix: developer 6.8.002.007
+openvix: developer 6.8.002.008
