--- a/ChangeLog
+++ b/ChangeLog
@@ -1658,3 +1658,4 @@ openvix: developer 6.8.002.007
 openvix: developer 6.8.002.008
 openvix: developer 6.8.002.009
 openvix: release 6.8.002
+openvix: developer 6.8.003.001
