--- a/ChangeLog
+++ b/ChangeLog
@@ -1659,3 +1659,4 @@ openvix: developer 6.8.002.008
 openvix: developer 6.8.002.009
 openvix: release 6.8.002
 openvix: developer 6.8.003.001
+openvix: release 6.8.003
