--- a/ChangeLog
+++ b/ChangeLog
@@ -1660,3 +1660,4 @@ openvix: developer 6.8.002.009
 openvix: release 6.8.002
 openvix: developer 6.8.003.001
 openvix: release 6.8.003
+openvix: developer 6.8.004.001
