--- a/ChangeLog
+++ b/ChangeLog
@@ -1661,3 +1661,4 @@ openvix: release 6.8.002
 openvix: developer 6.8.003.001
 openvix: release 6.8.003
 openvix: developer 6.8.004.001
+openvix: developer 6.8.004.002
