--- a/ChangeLog
+++ b/ChangeLog
@@ -1663,3 +1663,4 @@ openvix: release 6.8.003
 openvix: developer 6.8.004.001
 openvix: developer 6.8.004.002
 openvix: developer 6.8.004.003
+openvix: developer 6.8.004.004
