--- a/ChangeLog
+++ b/ChangeLog
@@ -1666,3 +1666,4 @@ openvix: developer 6.8.004.003
 openvix: developer 6.8.004.004
 openvix: developer 6.8.004.005
 openvix: developer 6.8.004.006
+openvix: developer 6.8.004.007
