--- a/ChangeLog
+++ b/ChangeLog
@@ -1667,3 +1667,4 @@ openvix: developer 6.8.004.004
 openvix: developer 6.8.004.005
 openvix: developer 6.8.004.006
 openvix: developer 6.8.004.007
+openvix: developer 6.8.004.008
